by pass changes

--- a/.github/workflows/eks_deployment_dev.yaml
+++ b/.github/workflows/eks_deployment_dev.yaml
@@ -31,7 +31,7 @@ env:
 jobs:
   ########## job to build the package and deploy to sonar for code analysis
   Build:
-    if: github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'edited'
+#     if: github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'edited'
     runs-on: ubuntu-latest
 
     steps:
@@ -85,7 +85,7 @@ jobs:
 #        run: mvn clean install sonar:sonar -Dsonar.qualitygate.wait=true -Dsonar.projectKey=${{env.SERVICE_CODE}}-qa -Dsonar.host.url=${{ secrets.SONAR_HOST }} -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dproject.version=${{ steps.version.outputs.version }}
 
   Build_Deploy:
-    if: github.ref == 'refs/heads/qa'
+#     if: github.ref == 'refs/heads/qa'
     runs-on: ubuntu-latest
 
     steps:
